--- a/d3.html
+++ b/d3.html
@@ -9,10 +9,10 @@
     <link type="text/css" href="js/jqUI/jquery-ui.min.css" rel="stylesheet" media="screen" />
     <script type="text/javascript" src="js/jq/jquery.js" defer="defer"></script>
     <script type="text/javascript" src="js/jqUI/jquery-ui.min.js" defer="defer"></script>
-    <script type="text/javascript" src="js/d3/d3.min.js" defer="defer"></script>
+    <script type="text/javascript" src="js/d3/d3.v7.min.js" defer="defer"></script>
     <script type="text/javascript" src="js/d3/init.js" defer="defer"></script>
   </head>
   <body>
-
+    <svg id="drawArea" height=400 width=600></svg>
   </body>
 </html>
