--- a/d3.html
+++ b/d3.html
@@ -15,11 +15,13 @@
     <script type="text/javascript" src="js/d3/d3.v7.min.js" defer="defer"></script>
     <script type="text/babel" src="js/react/MyButton.js" defer="defer"></script>
     <script type="text/babel" src="js/react/MyDummy.js" defer="defer"></script>
+    <script type="text/babel" src="js/react/MyList.js" defer="defer"></script>
     <script type="text/babel" src="js/d3/init.js" defer="defer"></script>
   </head>
   <body>
     <svg id="drawArea" height=400 width=600></svg>
     <div id="myButtonID"></div>
     <div id="myDummyID"></div>
+    <div id="myListID"></div>
   </body>
 </html>
