--- a/d3.html
+++ b/d3.html
@@ -6,13 +6,15 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" href="favicon.ico" />
     <!-- intentionally blank -->
-    <link type="text/css" href="js/jqUI/jquery-ui.min.css" rel="stylesheet" media="screen" />
+    <link type="text/css" href="js/jqUI/jquery-ui.min.css" rel="stylesheet" />
     <script type="text/javascript" src="js/jq/jquery.js" defer="defer"></script>
     <script type="text/javascript" src="js/jqUI/jquery-ui.min.js" defer="defer"></script>
     <script type="text/javascript" src="js/react_src/babel.min.js"></script>
     <script type="text/javascript" src="js/react_src/react.development.js"></script>
     <script type="text/javascript" src="js/react_src/react-dom.development.js"></script>
     <script type="text/javascript" src="js/d3/d3.v7.min.js" defer="defer"></script>
+    <link type="text/css" href="js/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <script type="text/javascript" src="js/bootstrap/react-bootstrap.min.js" defer="defer"></script>
     <script type="text/babel" src="js/react/MyButton.js" defer="defer"></script>
     <script type="text/babel" src="js/react/MyDummy.js" defer="defer"></script>
     <script type="text/babel" src="js/react/MyList.js" defer="defer"></script>
@@ -23,5 +25,6 @@
     <div id="myButtonID"></div>
     <div id="myDummyID"></div>
     <div id="myListID"></div>
+    <div id="myReactBootstrap"></div>
   </body>
 </html>
